<resources>
    <string name="app_name">NotificationNebula</string>
    <string name="channel_name">Nebula Notifications</string>
    <string name="channel_description">Channel for Notification originated at the Nebula Practice App</string>
    <string name="channel_id">NEBULA_NOTIFICATION_CHANNEL_ID</string>

    <string name="notification_action">com.outerspace.notificationnebula.NOTIFICATION_ACTION</string>

    <string name="info">Notifications and WorkManager</string>
    <string name="description">We need fire a task in WorkManager. It is stopping when we dimiss or crash the app. This practice is targeting into keeping continuous process running, regardless of the app being present or not.</string>

    <string name="notification_title">Nebula notifications</string>
    <string name="notification_content">Nebula notification information</string>
    <string name="btn_fire">Fire lengthily task</string>
    <string name="using_service">Using Services</string>
    <string name="using_work_manager">Using WorkManager</string>
    <string name="btn_kill_it">Kill the app!</string>
    <string name="btn_test">Test</string>
</resources>
